--- a/admin/header.html
+++ b/admin/header.html
@@ -80,6 +80,14 @@ scratch. This page gets rid of all links and provides the needed markup only.
               </p>
             </a>
           </li>
+          <li class="nav-item">
+            <a href="user_add.php" class="nav-link">
+              <i class="nav-icon fas fa-th"></i>
+              <p>
+                User
+              </p>
+            </a>
+          </li>
         </ul>
       </nav>
       <!-- /.sidebar-menu -->
